
-Spelling:
    -The new files at <languageCode>/hunspell/spelling.txt can be used to add
     accepted words to the spell checker that are also considered when creating
     suggestions for misspelled words.
     This is similar to the <languageCode>/hunspell/ignore.txt files, which list
     accepted words which are *not* used when creating suggestions for
     misspelled words.

-API:
    -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
    -Removed (Default)ResourceDataBroker.setResourceDir() and setRulesDir()
     as these can be set with the constructor
    -Cleaned up up class Contributor, e.g. removing getRemark()
    -Category.setDefaultOff() has been removed, this can be set via constructor now
    -Other small API cleanups that shouldn't affect the common use cases,
     e.g. IncorrectExample.getCorrections() returns and unmodifiable list now.

-Embedded server:
    -XML escaping has been fixed, this could cause invalid XML documents
     to be returned

-Rule syntax:
    -A rule may now have a single example sentence as long as it has a 'correction'
     attribute - this can save some redundancy if the only correct sentence is the
     same as the incorrect sentence with the correction applied. Before, a rule
     needed at least two example sentences.
    -'example' element: type="incorrect" is now optional if there's a 'correction'
     attribute. The 'correction' attribute implies that the sentence is incorrect.
    -'example' element: type="correct" is now optional. No 'type' attribute and
     no 'correction' attribute implies that the sentence is correct.

-Internal:
    -We have switched from Apache Tika to language-detector
     (https://github.com/optimaize/language-detector) for automatically
     identifying the text language. It should be faster and results
     should be more reliable.
     Detection of Asturian and Galician had to be disabled because the