@@ -47,6 +47,9 @@ LanguageTool Change Log
      misspelled words.
 
 -API:
+    -All static methods and fields from class 'Language' have been moved to the new
+     class 'Languages'. For now, the methods/fields in class Language still exist
+     but have been deprecated.
     -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
     -Removed (Default)ResourceDataBroker.setResourceDir() and setRulesDir()
      as these can be set with the constructor
